@@ -1,3 +1,7 @@
+Fri Feb  6 00:48:37 2004  Tanaka Akira  <akr@m17n.org>
+
+	* lib/prettyprint.rb (PrettyPrint#first?): obsoleted.
+
 Thu Feb  5 23:56:55 2004  Tanaka Akira  <akr@m17n.org>
 
 	* lib/prettyprint.rb (PrettyPrint#seplist): added.
